--- a/index.html
+++ b/index.html
@@ -1,11 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    
+    <div id="root">
+        <div class="App">
+            <header class="header">
+                <div class="container">
+                    <div class="d-flex align-items-center justify-content-between">
+                        <a href="#"><img src="main-icon1.png" width="60" height="60" class="logo" alt="Logo"></a>
+                        <nav >
+                            <ul class="navi" style="justify-content: right;">
+                                <li><a href="index.html">HOME</a></li>
+                                <li><a href="blood_avail.html">LOOKING FOR BLOOD</a></li>
+                                <li><a href="donar_login.html">WANT TO DONATE BLOOD</a></li>
+                                <li><a href="blood_bank_login.html">BLOOD BANK LOGIN</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </header>
+            
+            <section class="heroComponent">
+                <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-item "><img src="front_image.png" class="d-block w-100" alt="Second Image">
+                        <div class="carousel-caption d-md-block mt-3" style="left: 7%; bottom: 0px;"><button
+                                class="btn imgBtn d-none d-lg-block d-xl-block"
+                                onclick="window.location.href='donar_login.html'">BECOME A DONOR</button></div>
+                    </div>
+                </div>
+        </div>
+        </section>
+        <div class="donorCount">
+            <div class="d-xl-flex d-lg-flex d-md-flex d-sm-flex">
+                <div class="bg-left w-100 text-xl-end text-lg-end text-md-end text-sm-end text-center py-3 px-5">
+                    <p id="registeredDonorsAll" class="count mb-0">5734542</p>
+                    <p class="totalCount mb-0">Donor Registered</p>
+                </div>
+                <div
+                    class="bg-right w-100 text-xl-start text-lg-start text-md-start text-sm-start text-center py-3 px-5">
+                    <p id="donorsDonatedAll" class="count mb-0">5632125</p>
+                    <p class="totalCount mb-0">Blood Units Collected</p>
+                </div>
+            </div>
+        </div>
+        <section class="learn-donation">
+            <div class="bg-img">
+                <div class="container">
+                    <h3 class="section-heading text-center mt-5" style="text-align: center;">Learn About Donation</h3>
+                    <div class="d-flex justify-content-center align-items-center">
+                        <div class="">
+                            <p class="label mb-1">Select your Blood Type</p>
+                            <div class="d-flex flex-wrap"><button
+                                    class="btn selectBtn mb-3 mb-xl-0 active">A+</button><button
+                                    class="btn selectBtn mb-3 mb-xl-0 ">O+</button><button
+                                    class="btn selectBtn mb-3 mb-xl-0 ">B+</button><button
+                                    class="btn selectBtn mb-3 mb-xl-0 ">AB+</button><button
+                                    class="btn selectBtn mb-3 mb-xl-0 ">A-</button><button
+                                    class="btn selectBtn mb-3 mb-xl-0 ">O-</button><button
+                                    class="btn selectBtn mb-3 mb-xl-0 ">B-</button><button
+                                    class="btn selectBtn mb-3 mb-xl-0 ">AB-</button></div>
+                        </div>
+                    </div>
+                    <div class="row justify-content-center">
+                        <div class="col-xl-9 col-lg-10 col-12 d-flex justify-content-center">
+                            <div class="mt-3 select-container">
+                                <div class="row">
+                                    <div class="px-4 py-3 col-xl-7 col-lg-7 col-md-7 col-12">
+                                        <div class="row">
+                                            <div class="col-12">
+                                                <div class="org-container d-flex py-2 px-3"><img src="person-img.png"
+                                                        alt="" >
+                                                    <div class="d-flex flex-column justify-content-center ms-5 me-3">
+                                                        <p class="org-text mb-3">You can take from</p>
+                                                        <div class="d-flex flex-wrap">
+                                                            <p class="org-text">O+</p>
+                                                            <p class="org-text">O-</p>
+                                                            <p class="org-text">A+</p>
+                                                            <p class="org-text">A-</p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-12">
+                                                <div class="blue-container d-flex py-2 px-3 mt-3"><img
+                                                        src="person-img.png" alt="">
+                                                    <div class="d-flex flex-column justify-content-center ms-5 me-3">
+                                                        <p class="org-text mb-3">You can give to</p>
+                                                        <div class="d-flex flex-wrap">
+                                                            <p class="org-text">A+</p>
+                                                            <p class="org-text">AB+</p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div
+                                        class="d-flex flex-column align-items-center pe-xl-5 pe-lg-5 col-xl-5 col-lg-5 col-md-5 col-12">
+                                        <img src="doctor.png" alt="">
+                                        <p class="donate-blood-txt mb-0">One Blood Donation can save upto <span
+                                                class="">Three</span> Lives</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="donation-working mt-5">
+            <div class="donation-bg-img">
+                <div class="container">
+                    <h3 class="section-heading text-center py-5">How <span class="donation">Donation</span> Works?
+                    </h3>
+                    <div class="d-xl-flex justify-content-between">
+                        <div class="card-container pb-4">
+                            <div class="card h-100 align-items-center pt-4"><img src="reg-img.png" class="img-fluid"
+                                    alt="..." width="78px" height="78px">
+                                <div class="card-body text-center pt-4 pb-3">
+                                    <p class="card-text mb-0">Registration Process</p>
+                                    <p class="card-text-light mb-0">Sign up and schedule your first with ease</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="arrow-container mb-3 d-flex align-items-center justify-content-center"><img
+                                src="arrow-left.png" class="img-fluid" alt=""></div>
+                        <div class="card-container pb-4">
+                            <div class="card h-100 align-items-center pt-4"><img src="heart-img.png" class="img-fluid"
+                                    alt="..." width="78px" height="78px">
+                                <div class="card-body text-center pt-4 pb-3">
+                                    <p class="card-text mb-0">Health Screening</p>
+                                    <p class="card-text-light mb-0">A simple check-up to ensure you’re ready to
+                                        donate</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="arrow-container mb-3 d-flex align-items-center justify-content-center"><img
+                                src="arrow-left.png" class="img-fluid" alt=""></div>
+                        <div class="card-container pb-4">
+                            <div class="card h-100 align-items-center pt-4"><img src="pay-img.png" class="img-fluid"
+                                    alt="..." width="78px" height="78px">
+                                <div class="card-body text-center pt-4 pb-3">
+                                    <p class="card-text mb-0">Donation Day</p>
+                                    <p class="card-text-light mb-0">Relax as our professional staff guide you
+                                        through</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
+<footer>
+    <div>
+    <p>
+    </p>
+    </div>
+</footer>
 </html>
