--- a/dashboard.html
+++ b/dashboard.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
-    <style>
-        .tab { margin: 20px; padding: 10px; border: 1px solid #ccc; display: inline-block; cursor: pointer; }
-        .tab-content { display: none; }
-        .tab-content.active { display: block; }
-    </style>
+    <link rel="stylesheet" href="dashboard.css">
 </head>
 <body>
     <div class="tabs">
