--- a/login.html
+++ b/login.html
@@ -22,6 +22,7 @@
         }
         h2 {
             margin-bottom: 20px;
+            text-align: center;
         }
         input[type="text"], input[type="password"] {
             width: 100%;
@@ -29,25 +30,26 @@
             margin: 10px 0;
             border: 1px solid #ddd;
             border-radius: 4px;
+            text-align: center;
         }
         button {
             width: 100%;
             padding: 10px;
-            background-color: #5cb85c;
+            background-color: #7f0210;
             border: none;
             border-radius: 4px;
             color: white;
             font-size: 16px;
         }
         button:hover {
-            background-color: #4cae4c;
+            background-color: #c0222b;
         }
         .redirect {
             margin-top: 15px;
             text-align: center;
         }
         .redirect a {
-            color: #007bff;
+            color: #c0222b;
             text-decoration: none;
         }
     </style>
