--- a/register.html
+++ b/register.html
@@ -46,7 +46,7 @@
         button {
             width: 100%;
             padding: 10px;
-            background-color: #28a745;
+            background-color: #c0222b;
             border: none;
             border-radius: 4px;
             color: white;
@@ -54,7 +54,7 @@
             cursor: pointer;
         }
         button:hover {
-            background-color: #218838;
+            background-color: #7f0210;
         }
         .redirect {
             margin-top: 15px;
