--- a/dashboard.html
+++ b/dashboard.html
@@ -86,7 +86,7 @@
             <button type="submit">Update</button>
         </form>
     </div>
-    <div id="changePasswordContent" class="tab-content">
+    <div id="changePasswordContent" class="tab-content" style="justify-content: center;">
         <h3>Change Password</h3>
         <form id="changePasswordForm">
             <input type="password" id="currentPassword" placeholder="Old Password" required><br>
