--- a/dashboard.html
+++ b/dashboard.html
@@ -102,14 +102,15 @@
     </div>
 </div>
 <!-- </div> -->
-    <div id="deleteAccountContent" class="tab-content">
+<div style="display: flex; justify-content: center; align-content: center; flex-wrap: nowrap; width: 100%;">
+    <div id="deleteAccountContent" class="tab-content" style="width:50%">
         <h3>Delete Account</h3>
         <form id="deleteAccountForm">
             <p>Are you sure you want to delete your account? This action is irreversible.</p>
             <button type="submit">Yes, delete my account</button>
         </form>
     </div>
-
+</div>
     <script src="dashboard.js"></script>
     <script>
         // Populate Day dropdown
